test/operator/add_num_nil.lox
1 + null // error: Operation not allowed
